fix: fix chrome layout breaks while zooming out

--- a/assets/scss/partials/_global.scss
+++ b/assets/scss/partials/_global.scss
@@ -41,25 +41,25 @@ a {
     justify-content: space-between;
 }
 
-@media screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1) {
+@media screen and (max-width: 767px)  {
     .container {
         max-width: 767px;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 991px) and (-webkit-min-device-pixel-ratio: 1) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
     .container {
         max-width: 900px;
     }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1200px) and (-webkit-min-device-pixel-ratio: 1) {
+@media screen and (min-width: 992px) and (max-width: 1200px) {
     .container {
         max-width: 1000px;
     }
 }
 
-@media screen and (min-width: 1201px) and (-webkit-min-device-pixel-ratio: 1) {
+@media screen and (min-width: 1201px) {
     .container {
         max-width: 1200px;
     }
