--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -31,7 +31,7 @@
     list-style: none;
 }
 
-@media screen and (max-width: 991px) and (-webkit-min-device-pixel-ratio: 1) {
+@media screen and (max-width: 991px) {
     //hamburger menu
     .hamburger-menu {
         display: block;
